--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-template",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,12 +14,16 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
-    "@supabase/supabase-js": "^2.49.4",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.49.8",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.105.0-alpha.4",
