--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^4.5.1",
     "sharp": "^0.34.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
