--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
@@ -27,7 +30,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "lucide-react": "^0.105.0-alpha.4",
+    "lucide-react": "^0.105.0",
     "next": "^15.3.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -35,6 +38,7 @@
     "resend": "^4.5.1",
     "sharp": "^0.34.1",
     "tailwind-merge": "^1.14.0",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss-animate": "^1.0.7",
     "transbank-sdk": "^6.0.0"
   },
